# face_segmentation

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  face_seg.py  visualization.py
cmake/: face_seg-config-version.cmake.in  face_seg-config.cmake.in  face_segmentation-config.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
face_seg/: CMakeLists.txt  face_seg.cpp  utilities.cpp
face_seg/face_seg/: face_seg.h  utilities.h
face_seg_batch/: CMakeLists.txt  face_seg_batch.cfg  face_seg_batch.cpp
face_seg_image/: CMakeLists.txt  face_seg_image.cfg  face_seg_image.cpp
interfaces/python/: CMakeLists.txt  face_seg.py
output/: Alison_Lohman_0001.npy  scarlett-johansson_0.npy  trump_0.npy
